# celery-fastapi-async

./: .worker.env  Dockerfile.api  Dockerfile.worker  docker-compose.yml  init-db.sh  mypy.ini  pyproject.toml  query_examples.py  ruff.toml
app/: __init__.py  celery.py  config.py  main.py  models.py  tasks.py
tests/: conftest.py  test_api.py  test_noop_task.py
